# SimpleGame

./: .gitignore  .vimrc  AnotherGame.cabal  README.md  SimpleGame.cabal  stack.yaml
src/: .Main.hs.swp  Main.hs
