name:                 SimpleGame
version:              0.1.0.0
synopsis:             Simple game
-- description:
-- license:
-- license-file:
homepage:             
author:               SeTSeR
maintainer:           sergey200018@bk.ru
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable SimpleGame
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, array, gtk, mtl, text, cairo
  hs-source-dirs:       src
  default-language:     Haskell2010
